# OnlineRecSysOTTO

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt  requirements_experiments.txt  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: pre-commit-update.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
envs/: inference_requirements.txt
notebooks/: =1.13.0  RecSysExperiment.ipynb  RecSysExperiment.md
src/ottorecsys/: api.py  api_schemas.py  artifacts.py  config.py  recommender.py  train.py
tests/: test_data.py
